# V-Nych-Back

./: .gitignore  README.md  dev-down.ps1  dev-up.ps1  docker-compose.yml  instrucciones_vercel.txt  package-lock.json
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_initial_setup.sql  0002_add_users.sql  0003_add_notes.sql  0004_recreate_notes.sql  0005_add_parent_id_to_notes.sql  0006_create_events.sql  0007_add_color_to_events.sql  0008_create_task_features.sql  0009_add_task_attachments.sql  0010_task_attachments_nullable.sql
backend/src/: admin.rs  calendar.rs  main.rs  notes.rs  public_link.rs  tasks.rs  users.rs
web/src/: App.css
